[XWayland] [OL10] NumPad keys are not triggered

XMLWordPrintable

    • b07
    • linux_oracle

        Testsuite name: Regression
        Product(s) tested: JDK 25-ea+24,26-ea+3
        OS/architecture: Oracle Linux (tested on oraclelinux-release-10.0-1.0.7.el10.x86_64)

        On OEL 10 NumPad keys are not triggerd with the test KeyCharTest.java


        Reproducible: Always
        Is it a Regression: yes on JDK 25-ea+23 its works fine.
        Is it reproducible on other trains: Tried it on jdk-21.0.9+1-212, 17.0.17 b01, jdk-11.0.29+1-267,8u471b01 and its reproducible.
        Is it a platform specific issue: Yes, issue is seen only with OEL 10 platforms

        Is it reproducible on JDK25: Yes tested on jdk-25-ea+24 its reproducible
        Is it reproducible on JDK26: Yes tested on jdk-26-ea+3 its reproducible
        Is it reproducible on OEL 9.5 : No
        Is it reproducible on Ubuntu 24.04 : No

        Step to reproduce
        Compile and execute KeyCharTest.java

        Log
        java.lang.RuntimeException: Wrong KeyChar on KEY_RELEASED NumPad-0
        at KeyCharTest.keyReleased(KeyCharTest.java:53)
        at java.desktop/java.awt.Component.processKeyEvent(Component.java:6582)

              Assignee:
              Alexander Zvegintsev
              Reporter:
              Ravi Gupta
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

                Created:
                Updated:
                Resolved: