8360647: [XWayland] [OL10] NumPad keys are not triggered

Reviewed-by: mbaesken
Backport-of: 0029554d20f22648994040a041c418d48a2a0eb4